# 3D-DirectX-11-Engine

./: .gitignore  CMakeLists.txt  README.md  StudyNotes.md
CMake/: CommonMacros.txt
Core/: CMakeLists.txt
Core/src/: App.cpp  App.h  AppAssortment.cpp  AppAssortment.h  AppAssortmentPhong.cpp  AppAssortmentPhong.h  Camera.cpp  Camera.h  Cube.h  Graphics.cpp  Graphics.h  Mesh.cpp  Mesh.h  Plane.h  PointLight.cpp  PointLight.h  TestCube.cpp  TestCube.h  TestPlane.cpp  TestPlane.h  WinMain.cpp
Core/src/Bindable/: Bindable.cpp  Bindable.h  BindableCodex.h  Blender.cpp  Blender.h  ConstantBuffers.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.cpp  InputLayout.h  PixelShader.cpp  PixelShader.h  Rasterizer.cpp  Rasterizer.h  Sampler.cpp  Sampler.h  Texture.cpp  Texture.h  Topology.cpp  Topology.h  TransformCbuf.cpp  TransformCbuf.h  TransformCbufDouble.cpp  TransformCbufDouble.h  VertexBuffer.cpp  VertexBuffer.h  VertexShader.cpp  VertexShader.h
Core/src/Debug/: ConditionalNoexcept.h  DXException.cpp  DXException.h  DxgiInfoManager.cpp  DxgiInfoManager.h  GraphicsThrowMacros.h  WindowsThrowMacros.h  dxerr.h
Core/src/Drawable/: AssTest.cpp  AssTest.h  Box.cpp  Box.h  Cone.h  Cube.h  Cylinder.cpp  Cylinder.h  Drawable.cpp  Drawable.h  DrawableBase.h  DrawableCommon.h  IndexedTriangleList.h  Melon.h  Plane.h  Prism.h  Pyramid.cpp  Pyramid.h  Sheet.cpp  Sheet.h  SkinnedBox.cpp  SkinnedBox.h  SolidSphere.cpp  SolidSphere.h  Sphere.h  TestObject.h
Core/src/Drawable/Complex/: AssTest.cpp  AssTest.h  Mesh.cpp  Mesh.h  Vertex.h  VertexView.cpp  VertexView.h
Core/src/Drawable/Geometry/: Box.cpp  Box.h  Cone.h  Cube.h  Cylinder.cpp  Cylinder.h  IndexedTriangleList.h  Melon.cpp  Melon.h  Plane.h  Prism.h  Pyramid.cpp  Pyramid.h  Sheet.cpp  Sheet.h  SkinnedBox.cpp  SkinnedBox.h  SolidSphere.cpp  SolidSphere.h  Sphere.h
Core/src/Imgui/: imgui_wrapper.cpp
Core/src/Shaders/: BlendedPhongPS.hlsl  BlendedPhongVS.hlsl  IndexedPhongPS.hlsl  PhongAssPS.hlsl  PhongAssVS.hlsl  PhongPS.hlsl  PhongPSNormalMap.hlsl  PhongPSNormalMapObject.hlsl  PhongPSNotex.hlsl  PhongPSSpecMap.hlsl  PhongPSSpecNormalMap.hlsl  PhongVS.hlsl  PhongVSNormalMap.hlsl  PhongVSNotex.hlsl  PixelShader13_First_Triangle.hlsl  PixelShader14_Pipeline_Experiments.hlsl  PixelShader15_2.hlsl  SolidVS.hlsl  TexturedPhongPS.hlsl  TexturedPhongVS.hlsl  VertexShader13_First_Triangle.hlsl  VertexShader14_Pipeline_Experiments.hlsl  VertexShader15.hlsl  VertexShader15_2.hlsl
Core/src/Shaders/App/: PhongPSNormalMapObject.hlsl  PhongPSSpec.hlsl  PhongPSSpecNormalMap.hlsl
Core/src/Shaders/App/PhongNormalMap/: PhongPSNormalMap.hlsl  PhongVSNormalMap.hlsl
Core/src/Shaders/App/PhongNotex/: PhongPSNotex.hlsl  PhongVSNotex.hlsl
Core/src/Shaders/App/PhongPosNorm/: PhongPosNormPS.hlsl  PhongPosNormVS.hlsl
Core/src/Shaders/App/PhongPosNormTex/: PhongPosNormTexPS.hlsl  PhongPosNormTexVS.hlsl
Core/src/Shaders/App/Solid/: SolidVS.hlsl
Core/src/Shaders/AppAssortment/: ColorBlendVS.hlsl  ColorIndexPS.hlsl  ColorIndexVS.hlsl  TexturePS.hlsl  TextureVS.hlsl
Core/src/Shaders/cso/: BlendedPhongPS.cso  BlendedPhongVS.cso  ColorBlendPS.cso  ColorBlendVS.cso  ColorIndexPS.cso  ColorIndexVS.cso  IndexedPhongPS.cso  PhongPS.cso  PhongVS.cso  PixelShader13_First_Triangle.cso  PixelShader14_Pipeline_Experiments.cso  PixelShader15.cso  PixelShader15_2.cso  SolidPS.cso  SolidVS.cso  TexturePS.cso  TextureVS.cso  TexturedPhongPS.cso  TexturedPhongVS.cso  VertexShader13_First_Triangle.cso  VertexShader14_Pipeline_Experiments.cso  VertexShader15.cso  VertexShader15_2.cso
Core/src/Shaders/helper/: LightVectorData.hlsl  PointLight.hlsl  ShaderOps.hlsl  Transform.hlsl
Core/src/Utils/: D3DXM.cpp  D3DXM.h  DXTimer.cpp  DXTimer.h  EngineMath.h  GDIPlusManager.cpp  GDIPlusManager.h  NormalMapTwerker.h  Surface.cpp  Surface.h  TexturePreprocessor.cpp  TexturePreprocessor.h  Timer.cpp  Timer.h  WinHelper.h  WindowsMessageMap.cpp
Core/src/Window/: DXKeyboard.cpp  DXKeyboard.h  DXMouse.cpp  DXMouse.h  DXWindow.cpp  DXWindow.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Window.cpp  Window.h  WindowsMessageMap.cpp  WindowsMessageMap.h
Core/src/WindowsResource/: appico.rc  resource.h
